# ATMega328PThermometer

./: .gitignore  CMakeLists.txt  README.md  i2c.c
src/: ds18b20.c  ds18b20.h  hd44780.c  hd44780.h  i2c.c  i2c.h  main.c  utils.c  utils.h
